# music-sounds-better-without-you

client/: Pipfile
micro_controller/: platformio.ini
micro_controller/examples/arduino_udp_client/: arduino_udp_client.ino
micro_controller/src/: main.cpp  stop.cpp
micro_controller/src/main/: main.ino
music-client/: music-client.ino
src/: main.cpp
subpub_server/: Cargo.toml  midi_mapping.toml  plan.md
subpub_server/examples/: 01-basic-send.ino
subpub_server/src/: main.rs  midi_handler.rs  server.rs
